--- a/css/style.css
+++ b/css/style.css
@@ -42,12 +42,36 @@
     text-decoration: none;
 }
 
+/* Reset */
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
+
+ul,
+ol {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+img {
+    display: block;
+}
+
 /* Page Header */
 
 .container {
     margin-right: auto;
     margin-left: auto;
-    width: 1440px;
+    max-width: 1158px;
+    outline: 2px solid red;
 }
 
 .logo {
@@ -63,11 +87,7 @@
     color: #4D5AE5;
 }
 
-.footer-logo-span {
-    color: #F4F4FD;
-}
-
-.menu-list {
+.header-link {
     font-family: var(--primary-font);
     font-style: normal;
     font-weight: 500;
@@ -77,13 +97,13 @@
     color: #2E2F42;
 }
 
-.menu-list:hover,
-.menu-list:focus {
+.header-link:hover,
+.header-link:focus {
     color: #404BBF;
 }
 
-.contact {
-    font-family: var(--primary-font);
+.contacts-link {
+    var(--primary-font);
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -92,16 +112,21 @@
     color: #434455;
 }
 
-.contact:hover,
-.contact:focus {
+.contacts-link:hover,
+.contacts-link:focus {
     color: #404BBF;
 }
 
 /* Hero Title */
 
+.hero {
+    padding-top: 188px;
+    padding-bottom: 188px;
+    background-color: var(--accent-color);
+}
+
 .hero-title {
     margin-top: 0;
-    margin-bottom: 48px;
     font-family: var(--primary-font);
     font-style: normal;
     font-weight: 700;
@@ -109,7 +134,6 @@
     line-height: 1.07;
     letter-spacing: 0.02em;
     color: #FFFFFF;
-    background-color: var(--accent-color);
 }
 
 .modal-btn {
@@ -118,7 +142,7 @@
     min-width: 130px;
     border-radius: 4px;
     padding: 16px 32px;
-    margin-bottom: 48px;
+    margin-top: 48px;
 
     font-family: var(--primary-font);
     font-style: normal;
@@ -138,6 +162,161 @@
     background-color: #404BBF;
     color: #FFFFFF;
 }
+
+/* About us */
+
+.about-name {
+    margin-top: 120px;
+    font-family: var(--primary-font);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    color: var(--accent-color);
+}
+
+.info {
+    padding-top: 8px;
+    font-family: var(--primary-font);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+/* Projects */
+
+.projects-team {
+    margin-top: 120px;
+    font-family: var(--primary-font);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: var(--accent-color);
+}
+
+.projects-list__team {
+    padding-top: 72px;
+}
+
+/* Team */
+
+.team {
+    margin-top: 120px;
+    padding-bottom: 120px;
+    padding-top: 120px;
+    background-color: #F4F4FD;
+}
+
+.team-list {
+    padding-top: 72px;
+}
+
+.team-title {
+    font-family: var(--primary-font);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: var(--accent-color);
+}
+
+.team-item {
+    background-color: #FFFFFF;
+    width: 264px;
+}
+
+.name-worker {
+    margin-top: 32px;
+    font-family: var(--primary-font);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: var(--accent-color);
+}
+
+.info-name-worker {
+    margin-top: 8px;
+    padding-bottom: 32px;
+    font-family: var(--primary-font);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+/* Footer */
+
+.footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    font-family: var(--primary-font);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    color: #F4F4FD;
+    background-color: var(--accent-color);
+}
+
+.footer-subtitle {
+    margin-top: 16px;
+}
+
+.footer-logo-span {
+    color: #F4F4FD;
+}
+
+/* Portfolio */
+/* Site nav */
+
+.projects-nav {
+    margin-top: 96px;
+}
+
+.first-projects {
+    padding-top: 72px;
+}
+
+.second-projects {
+    padding-top: 48px;
+}
+
+.third-projects {
+    padding-top: 48px;
+    padding-bottom: 120px;
+}
+
+.description {
+    margin-top: 8px;
+    padding-bottom: 32px;
+    font-family: var(--primary-font);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+/* END */
 
 .list-btn {
     font-family: var(--primary-font);
@@ -160,81 +339,8 @@
     color: #FFFFFF;
 }
 
-.name-list {
-    font-family: var(--primary-font);
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
-    letter-spacing: 0.02em;
-    color: var(--accent-color);
-}
-
-.info {
-    font-family: var(--primary-font);
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
-
-.section-wawd {
-    font-family: var(--primary-font);
-    font-style: normal;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: var(--accent-color);
-}
-
-.section-team {
-    background-color: #F4F4FD;
-}
-
-.team {
-    font-family: var(--primary-font);
-    font-style: normal;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: var(--accent-color);
-}
-
-.section-team-list {
-    background-color: #FFFFFF;
-}
-
-.name-worker {
-    font-family: var(--primary-font);
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: var(--accent-color);
-}
-
-.info-name-worker {
-    font-family: var(--primary-font);
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
-
-.projects-list {
+.title-project {
+    margin-top: 32px;
     font-family: var(--primary-font);
     font-style: normal;
     font-weight: 500;
@@ -242,25 +348,4 @@
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--accent-color);
-}
-
-.description {
-    font-family: var(--primary-font);
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
-
-.footer {
-    font-family: var(--primary-font);
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.02em;
-    color: #F4F4FD;
-    background-color: var(--accent-color);
 }
