--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ img {
     margin-left: auto;
     max-width: 1158px;
     padding-left: 15px;
-    padding-right: 15px
+    padding-right: 15px;
 }
 
 .logo {
