--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ img {
     margin-right: auto;
     margin-left: auto;
     max-width: 1158px;
+    padding: 0 15px;
 }
 
 .logo {
@@ -98,10 +99,10 @@ img {
 }
 
 .header-container {
+    padding-top: 24px;
+    padding-bottom: 24px;
     display: flex;
     align-items: center;
-    padding-left: 15px;
-    padding-right: 15px;
 }
 
 .header-nav {
