--- a/css/style.css
+++ b/css/style.css
@@ -99,8 +99,7 @@ img {
 }
 
 .header-container {
-    padding-top: 24px;
-    padding-bottom: 24px;
+    padding: 24px 0;
     display: flex;
     align-items: center;
 }
