--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ img {
     margin-right: auto;
     margin-left: auto;
     max-width: 1158px;
-    padding: 0 15px;
+    padding: 0 15px 0 15px;
 }
 
 .logo {
