--- a/css/style.css
+++ b/css/style.css
@@ -119,13 +119,10 @@ img {
 /* ul */
 .header-list {
     display: flex;
-    padding-top: 24px;
-    padding-bottom: 24px;
+    padding: 24px 0;
 }
 
 /* li */
-.header-item {}
-
 .header-item:not(:last-child) {
     margin-right: 40px;
 }
