--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,8 @@ img {
 
 /* a */
 .header-link {
-    padding: 24px 0;
+    padding-top: 24px;
+    padding-bottom: 24px;
     display: inline-block;
     font-family: var(--primary-font);
     font-style: normal;
