--- a/css/style.css
+++ b/css/style.css
@@ -145,20 +145,23 @@ img {
     color: #404BBF;
 }
 
-
+/* address */
 .contacts {
     margin-left: auto;
 }
 
+/* ul */
 .contacts-list {
     display: flex;
     gap: 40px;
 }
 
+/* li */
 .contacts-item {
     margin-left: 40px;
 }
 
+/* a */
 .contacts-link {
     font-family: var(--primary-font);
     font-style: normal;
@@ -174,8 +177,12 @@ img {
     color: #404BBF;
 }
 
-/* Hero Title */
-
+/**
+  |============================
+  | Hero Title
+  |============================
+*/
+/* section */
 .hero {
     padding-top: 188px;
     padding-bottom: 188px;
@@ -183,8 +190,9 @@ img {
     background-color: var(--accent-color);
 }
 
+/* h1 */
 .hero-title {
-    width: 496px;
+    max-width: 496px;
     margin: auto;
     padding-bottom: 48px;
     font-family: var(--primary-font);
@@ -196,12 +204,13 @@ img {
     color: #FFFFFF;
 }
 
+/* button */
 .modal-btn {
     margin: auto;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     text-align: center;
     display: block;
-    min-width: 130px;
+    min-width: 169px;
     border-radius: 4px;
     padding: 16px 32px;
     border: none;
@@ -224,8 +233,12 @@ img {
     color: #FFFFFF;
 }
 
-/* About us */
-
+/**
+  |============================
+  | About us
+  |============================
+*/
+/* section */
 .about {
     padding-top: 120px;
 }
