--- a/css/style.css
+++ b/css/style.css
@@ -276,10 +276,20 @@ img {
     color: #434455;
 }
 
-/* Projects */
+/**
+  |============================
+  | Projects
+  |============================
+*/
+/* section */
+.projets {
+    padding-bottom: 120px;
+}
 
+/* h2 */
 .projects-team {
     margin-top: 120px;
+    margin-bottom: 72px;
     font-family: var(--primary-font);
     font-style: normal;
     font-weight: 700;
@@ -291,8 +301,9 @@ img {
     color: var(--accent-color);
 }
 
+/* ul */
 .projects-list__team {
-    padding-top: 72px;
+    gap: 24px;
     display: flex;
     justify-content: space-between;
 }
@@ -418,26 +429,30 @@ img {
 }
 
 
-/* Projects */
+/**
+  |============================
+  | Portfolio
+  |============================
+*/
 
-.projects {
+.portfolio {
     padding-top: 72px;
     margin-bottom: 120px;
 }
 
-.projects-list {
+.portfolio-list {
     display: flex;
     flex-wrap: wrap;
     gap: 48px 24px;
     justify-content: center;
 }
 
-.projects-item {
+.portfolio-item {
     width: 360px;
     border: 1px solid #E7E9FC;
 }
 
-.title-project {
+.title-portfolio {
     margin-top: 32px;
     padding-left: 16px;
     font-family: var(--primary-font);
