--- a/css/style.css
+++ b/css/style.css
@@ -308,8 +308,12 @@ img {
     justify-content: space-between;
 }
 
-/* Team */
-
+/**
+  |============================
+  | Team
+  |============================
+*/
+/* section */
 .team {
     margin-top: 120px;
     padding-bottom: 120px;
@@ -317,13 +321,9 @@ img {
     background-color: #F4F4FD;
 }
 
-.team-list {
-    padding-top: 72px;
-    display: flex;
-    justify-content: space-between;
-}
-
+/* h2 */
 .team-title {
+    margin-bottom: 72px;
     font-family: var(--primary-font);
     font-style: normal;
     font-weight: 700;
@@ -335,13 +335,30 @@ img {
     color: var(--accent-color);
 }
 
+/* ul */
+.team-list {
+    gap: 24px;
+    padding-top: 72px;
+    display: flex;
+    justify-content: space-between;
+}
+
+/* li */
 .team-item {
     background-color: #FFFFFF;
     width: 264px;
 }
 
+/* div */
+.worker-wrapper {
+    padding: 32px 16px;
+    border-radius: 0px 0px 4px 4px;
+}
+
+/* h3 */
 .name-worker {
     margin-top: 32px;
+    margin-bottom: 8px;
     font-family: var(--primary-font);
     font-style: normal;
     font-weight: 500;
@@ -352,8 +369,8 @@ img {
     color: var(--accent-color);
 }
 
+/* p */
 .info-name-worker {
-    margin-top: 8px;
     padding-bottom: 32px;
     font-family: var(--primary-font);
     font-style: normal;
