--- a/css/style.css
+++ b/css/style.css
@@ -491,11 +491,6 @@ img {
   |============================
 */
 
-.portfolio {
-    padding-top: 72px;
-    margin-bottom: 120px;
-}
-
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
@@ -504,7 +499,8 @@ img {
 }
 
 .portfolio-item {
-    width: 360px;
+    /* width: 360px; */
+    width: calc((100% - 48px) / 3);
     border: 1px solid #E7E9FC;
 }
 
