--- a/css/style.css
+++ b/css/style.css
@@ -489,7 +489,7 @@ img {
   | Portfolio
   |============================
 */
-
+/* ul */
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
@@ -497,12 +497,21 @@ img {
     justify-content: center;
 }
 
+/* li */
 .portfolio-item {
     /* width: 360px; */
     width: calc((100% - 48px) / 3);
-    border: 1px solid #E7E9FC;
 }
 
+/* div */
+.name-app-portfolio {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    margin-bottom: 8px;
+}
+
+/* h2 */
 .title-portfolio {
     margin-top: 32px;
     padding-left: 16px;
