--- a/css/style.css
+++ b/css/style.css
@@ -514,6 +514,7 @@ img {
 /* h2 */
 .title-portfolio {
     margin-top: 32px;
+    margin-bottom: 8px;
     padding-left: 16px;
     font-family: var(--primary-font);
     font-style: normal;
@@ -524,8 +525,8 @@ img {
     color: var(--accent-color);
 }
 
+/* p */
 .description {
-    margin-top: 8px;
     padding-left: 16px;
     padding-bottom: 32px;
     font-family: var(--primary-font);
@@ -537,4 +538,4 @@ img {
     color: #434455;
 }
 
-/* END */
+/* THE END */
