--- a/css/style.css
+++ b/css/style.css
@@ -190,10 +190,19 @@ img {
 */
 /* section */
 .hero {
+    /* max-width: 1440px;
+    margin: 0 auto; */
     padding-top: 188px;
     padding-bottom: 188px;
+
     text-align: center;
     background-color: var(--accent-color);
+
+    /* background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)),
+        url(../images/hero/people_office.jpg);
+    background-repeat: no-repeat;
+    background-size: cover; */
 }
 
 /* h1 */
@@ -460,7 +469,10 @@ img {
 
 /* button */
 .list-btn {
-    padding: 11px 23px;
+    padding-top: 11px;
+    padding-bottom: 11px;
+    padding-left: 23px;
+    padding-right: 23px;
     border: 1px solid #E7E9FC;
     border-radius: 4px;
     font-family: var(--primary-font);
